V11 Onze Royaumes — migration Godot validée
Remplace l'ancienne génération Android Canvas de main par la V11 Godot validée : interface CHK, 11 royaumes, Royaume Troublé final, bateau/accostage tactile, PNJ humanoïdes, relique persistante, tests V8/V9/V11 et workflow APK dédié. Retire les pipelines legacy susceptibles de publier les anciennes générations.