@@ -6,14 +6,13 @@ import android.speech.tts.TextToSpeech;
 import android.view.View;
 import android.view.Window;
 import android.view.WindowManager;
-import android.widget.FrameLayout;
 
 import java.util.Locale;
 
-public final class MainActivity extends Activity implements WorldGameView.VoiceNarrator {
+public final class MainActivity extends Activity implements PirateGameView.VoiceNarrator {
     private TextToSpeech textToSpeech;
     private boolean voiceReady;
-    private WorldGameView gameView;
+    private PirateGameView gameView;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -22,32 +21,28 @@ public final class MainActivity extends Activity implements WorldGameView.VoiceN
         getWindow().addFlags(WindowManager.LayoutParams.FLAG_FULLSCREEN
                 | WindowManager.LayoutParams.FLAG_KEEP_SCREEN_ON);
         hideSystemBars();
-        setContentView(R.layout.activity_main);
-
-        FrameLayout root = findViewById(R.id.game_root);
-        gameView = new WorldGameView(this, this);
-        root.addView(gameView, new FrameLayout.LayoutParams(
-                FrameLayout.LayoutParams.MATCH_PARENT,
-                FrameLayout.LayoutParams.MATCH_PARENT));
 
         textToSpeech = new TextToSpeech(this, status -> {
             if (status == TextToSpeech.SUCCESS) {
                 int result = textToSpeech.setLanguage(Locale.FRANCE);
                 voiceReady = result != TextToSpeech.LANG_MISSING_DATA
                         && result != TextToSpeech.LANG_NOT_SUPPORTED;
-                textToSpeech.setSpeechRate(0.94f);
-                textToSpeech.setPitch(0.97f);
+                textToSpeech.setSpeechRate(0.92f);
+                textToSpeech.setPitch(0.96f);
                 if (voiceReady && gameView != null) {
                     gameView.onVoiceReady();
                 }
             }
         });
+
+        gameView = new PirateGameView(this, this);
+        setContentView(gameView);
     }
 
     @Override
     public void speak(String text) {
-        if (voiceReady && text != null && !text.trim().isEmpty()) {
-            textToSpeech.speak(text, TextToSpeech.QUEUE_FLUSH, null, "chk-pirate-v2");
+        if (voiceReady && text != null && !text.isBlank()) {
+            textToSpeech.speak(text, TextToSpeech.QUEUE_FLUSH, null, "chk-pirate-voice");
         }
     }
 
@@ -55,12 +50,16 @@ public final class MainActivity extends Activity implements WorldGameView.VoiceN
     protected void onResume() {
         super.onResume();
         hideSystemBars();
-        if (gameView != null) gameView.resumeGameLoop();
+        if (gameView != null) {
+            gameView.resumeGameLoop();
+        }
     }
 
     @Override
     protected void onPause() {
-        if (gameView != null) gameView.pauseGameLoop();
+        if (gameView != null) {
+            gameView.pauseGameLoop();
+        }
         super.onPause();
     }
 
@@ -76,7 +75,9 @@ public final class MainActivity extends Activity implements WorldGameView.VoiceN
     @Override
     public void onWindowFocusChanged(boolean hasFocus) {
         super.onWindowFocusChanged(hasFocus);
-        if (hasFocus) hideSystemBars();
+        if (hasFocus) {
+            hideSystemBars();
+        }
     }
 
     private void hideSystemBars() {
